<resources>
    <string name="app_name">Project_Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="sqrt">\u221A</string>
    <string name="clear">C</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnSign">\u00B1</string>
    <string name="btn0">0</string>
    <string name="btnDecimal">.</string>
    <string name="btnAdd">+</string>
    <string name="btnEqual">=</string>
    <string name="btnSubtract">-</string>
    <string name="btnMultiply">\u00D7</string>
    <string name="btnModulas">%</string>
    <string name="btnDiv">\u00F7</string>
</resources>
